--- a/index4.html
+++ b/index4.html
@@ -157,6 +157,8 @@ footer{
         <p><h3> การออกกำลังกายอย่างสม่ำเสมอเป็นสิ่งที่ถูกหยิบยกขึ้นมาพูดถึงอยู่เสมอในการดูแลสุขภาพ เนื่องจากมีงานวิจัยมากมายที่สรุปออกมาเป็นเสียงเดียวกันว่า การออกกำลังการอย่างสม่ำเสมอช่วยลดความเสี่ยงการเกิดโรคได้มากมาย
         	การออกกำลังกายในระดับที่เหมาะสมจะช่วยปรับปรุงสุขภาพหัวใจ หลอดเลือด และกระดูกให้ดีขึ้นเป็นการดูแลสุขภาพด้วยตัวเองง่าย ๆ และใครที่ต้องการเพิ่มมวลกล้ามเนื้อ ลดไขมัน หรือต้องการดูแลรูปร่างให้ดี การออกกำลังกายก็ช่วยได้เรื่องเหล่านี้ได้เป็นอย่างดี</h3></p>
       </ul>
+	    <br>
+	    <p><h3><center>คอยสังเกตดูแลเอาใจใส่ตัวเองทั้งร่างกายและจิตใจ ว่าอยู่ในภาวะสมดุลหรือไม่ ทำอะไรเกินหรือขาดไปบ้าง ให้ฟังเสียงของร่างกายและจิตใจ เพื่อจะได้รู้ว่าเราควรปรับตัวเองเพื่อให้ร่างกายและจิตใจอยู่ในสภาวะสมดุลอย่างไร</center></h3></p>
       <footer>
         <hr>
         <h5><center>Presented By</center></h5>
