--- a/index2.html
+++ b/index2.html
@@ -132,7 +132,10 @@ body {
 
 <body>
     <header>
-        <center><p><h1>สุขภาพดีเริ่มต้นที่เรา</h1></p1></center>
+       <center>
+            <h1>สวนสาธารณะ</h1>
+            <img src="https://cdn-icons-png.flaticon.com/128/532/532988.png" style="width: 120px; height: 120px;" alt="logo">
+        </center>
     </header>
     <div class="menu-bar">
         <ul>
