--- a/index2.html
+++ b/index2.html
@@ -133,7 +133,7 @@ body {
 <body>
     <header>
        <center>
-            <h1>สวนสาธารณะ</h1>
+            <h1>สวนสุขภาพ</h1>
             <img src="https://cdn-icons-png.flaticon.com/128/532/532988.png" style="width: 120px; height: 120px;" alt="logo">
         </center>
     </header>
