--- a/index2.html
+++ b/index2.html
@@ -145,7 +145,7 @@ body {
           <li><a href="index4.html"><img src="https://cdn-icons-png.flaticon.com/128/3914/3914794.png" style="width: 24px; height: 20px;" alt="invised Icon">คำแนะนำ</a></li>
         </ul>
       </div>
-    <center><b><h2>10 สวนสุขภาพในกรุงเทพมหานคร</h2></b></center>
+    <center><b><h2>สวนสุขภาพ 10 แห่งในกรุงเทพมหานคร</h2></b></center>
     <center><img src="https://www.chillpainai.com/src/wewakeup/scoop/img_scoop/scoop/kang/travel/10%20saun/SuanBeni_Chill_17.jpg" alt="park" width="1000" height="500"></center>
     <p><center><h3>พื้นที่สีเขียวไว้พักผ่อนหย่อนใจสวนสาธารณะในกรุง พื้นที่เขียวๆ เลยกลายเป็นที่สำคัญ พวกเราขอแนะนำ 10 สวนสาธารณะ  น่าไปนั่งชิลๆ พื้นที่กว้าง </h3></center></p>
 <!-- แบ่งส่วนหน้าจอ -->
