--- a/index2.html
+++ b/index2.html
@@ -140,7 +140,7 @@ body {
     <div class="menu-bar">
         <ul>
             <li> <a href="index.html"><img src="https://cdn-icons-png.flaticon.com/128/3917/3917033.png" style="width: 24px; height: 20px;" alt="Home Icon"> หน้าแรก</a></li>
-          <li><a href="index2.html"><img src="https://cdn-icons-png.flaticon.com/128/9238/9238289.png" style="width: 24px; height: 20px;" alt="park Icon">10 สวนสุขภาพ</a></li>
+          <li><a href="index2.html"><img src="https://cdn-icons-png.flaticon.com/128/9238/9238289.png" style="width: 24px; height: 20px;" alt="park Icon">สวนสุขภาพ 10 แห่งในกรุงเทพ</a></li>
           <li><a href="map.html"><img src="https://cdn-icons-png.flaticon.com/128/5073/5073819.png" style="width: 22px; height: 19px;" alt="map Icon"> สวนสุขภาพกรุงเทพ</a></li>
           <li><a href="index4.html"><img src="https://cdn-icons-png.flaticon.com/128/3914/3914794.png" style="width: 24px; height: 20px;" alt="invised Icon">คำแนะนำ</a></li>
         </ul>
